crates/typestate-pipeline/tests/ui/nightly/transitions_first_param_not_state.stderr
error: transition method's first parameter must be named `state`
  --> tests/ui/nightly/transitions_first_param_not_state.rs:13:13
   |
13 |     fn noop(thing: A) -> B {
   |             ^^^^^
   |
   = help: rename `thing` to `state` — the macro identifies the typestate-carrying parameter by name
